<resources>
    <string name="app_name">sikika</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab, asperiores dignissimos eius eligendi eos error esse et eveniet magni modi quaerat, quidem quis quo soluta, suscipit tenetur voluptate voluptates?</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_articles">Articles</string>
    <string name="menu_films">Films</string>
    <string name="menu_drama">Drama</string>
    <string name="menu_stream">Stream Live</string>
    <string name="menu_partners">Partners</string>
    <string name="menu_creative_arts">Creative Arts</string>
    <string name="menu_features">Features</string>
    <string name="menu_about_us">About Us</string>

    <string name="articles">articles</string>
    <string name="creative_arts">creative arts</string>
    <string name="drama">drama</string>
    <string name="features">features</string>
    <string name="film">film</string>
    <string name="partners">partners</string>
    <string name="stream_live">stream live</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="title_activity_article_reader">ArticleReader</string>
</resources>
